--- a/getting-started/installation-configuration/install-bazel.mdx
+++ b/getting-started/installation-configuration/install-bazel.mdx
@@ -1,120 +1,80 @@
 ---
 title: "Install with Bazel"
-description: "Get started with Bazel as your build system. This page provides practical instructions and ready-to-use code snippets for adding the GoogleTest repository to your WORKSPACE file and defining your test targets."
+description: "Get started building and running GoogleTest-based tests using Bazel. Outlines dependency setup, basic BUILD targets, and initial tests."
 ---
 
 # Install with Bazel
 
-Get started with Bazel as your build system to incorporate GoogleTest in your C++ projects. This guide provides practical, step-by-step instructions and ready-to-use code snippets to add the GoogleTest repository to your Bazel `WORKSPACE` file and define test targets in your `BUILD` files.
+Get started building and running GoogleTest-based tests using Bazel. This guide walks you through setting up Bazel dependencies, creating BUILD targets, and running your first test with GoogleTest.
 
 ---
 
-## 1. Prerequisites & System Requirements
+## 1. Prerequisites & Requirements
 
-- **Supported Platforms:** Linux, macOS, Windows, and other platforms supported by Bazel.
-- **Compiler:** A C++ compiler with C++17 support is mandatory.
-- **Bazel Version:** Bazel 7.0 or higher.
-- **Network Access:** Required to download remote dependencies the first time.
+- **Operating System**: Linux, macOS, or Windows.
+- **C++ Compiler**: Must support at least C++17.
+- **Bazel Version**: Bazel 7.0 or higher. Install Bazel from [https://bazel.build/install](https://bazel.build/install).
 
 <Tip>
-Ensure your environment uses C++17 or higher, as GoogleTest requires this standard for build and operation.
+Ensure your compiler is properly configured to support C++17 standards. For GCC or Clang, you will use standard compiler flags as part of the Bazel build.
 </Tip>
 
 ---
 
-## 2. Setting Up Your Bazel Workspace
+## 2. Setting up Your Bazel Workspace
 
-A Bazel workspace is the root directory of your project where Bazel tracks source files, dependencies, and build commands.
+Follow these steps to configure your Bazel workspace for GoogleTest:
 
-### Step 1: Create Your Workspace Directory
+### a. Create a Workspace Directory
 
-Run the following commands to create and enter a new workspace:
+Open your terminal or command prompt and run:
 
 ```bash
 mkdir my_workspace && cd my_workspace
 ```
 
-### Step 2: Add the `MODULE.bazel` File
+### b. Add a `MODULE.bazel` File
 
-Bazel now recommends managing external dependencies through `MODULE.bazel`. Create this file at the root of your workspace with the following content:
+Create a file named `MODULE.bazel` in the root of your workspace with the following content:
 
 ```python
 # MODULE.bazel
 
-# Specify a stable release version of GoogleTest from the Bazel Central Registry
+# Load GoogleTest dependency version from Bazel Central Registry
 bazel_dep(name = "googletest", version = "1.17.0")
 ```
 
-This configuration tells Bazel to fetch the GoogleTest libraries as a dependency.
+This line instructs Bazel to automatically fetch GoogleTest version 1.17.0 and manage its dependencies for you.
 
-<Tip>
-Check for newer GoogleTest versions at https://registry.bazel.build/modules/googletest to keep your tests up to date.
-</Tip>
-
----
-
-## 3. Adding GoogleTest Dependencies in `WORKSPACE`
-
-If your project does not use Bazel modules, you can still add GoogleTest by modifying your `WORKSPACE` file.
-
-### Example: `WORKSPACE` Setup
-
-Add these snippets to include the GoogleTest repository and its dependencies.
-
-```starlark
-workspace(name = "googletest")
-
-load("//:googletest_deps.bzl", "googletest_deps")
-googletest_deps()
-
-load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
-
-http_archive(
-    name = "rules_python",
-    sha256 = "2cc26bbd53854ceb76dd42a834b1002cd4ba7f8df35440cf03482e045affc244",
-    strip_prefix = "rules_python-1.3.0",
-    url = "https://github.com/bazelbuild/rules_python/releases/download/1.3.0/rules_python-1.3.0.tar.gz",
-)
-
-py_repositories()
-
-http_archive(
-    name = "platforms",
-    urls = [
-        "https://mirror.bazel.build/github.com/bazelbuild/platforms/releases/download/0.0.11/platforms-0.0.11.tar.gz",
-        "https://github.com/bazelbuild/platforms/releases/download/0.0.11/platforms-0.0.11.tar.gz",
-    ],
-    sha256 = "29742e87275809b5e598dc2f04d86960cc7a55b3067d97221c9abbc9926bff0f",
-)
-```
-
-<Tip>
-Refer to the provided `WORKSPACE` file inside the GoogleTest repository for the latest dependency configurations.
-</Tip>
+<Warning>
+Make sure to update the `version` string in `MODULE.bazel` to the latest release if needed. You can check versions at the [Bazel Central Registry](https://registry.bazel.build/modules/googletest).
+</Warning>
 
 ---
 
-## 4. Writing Your First Test with Bazel
+## 3. Creating Your First Test
 
-### Step 1: Create a Test Source File
+You are now ready to build and run tests that use GoogleTest.
 
-Create a C++ test file `hello_test.cc` in your workspace:
+### a. Write a Source File
+
+Create a test file named `hello_test.cc` inside your `my_workspace` directory with the following code:
 
 ```cpp
 #include <gtest/gtest.h>
 
-// Demonstrate some basic assertions.
+// Simple test case demonstrating basic assertions
 TEST(HelloTest, BasicAssertions) {
-  EXPECT_STRNE("hello", "world");  // Check strings are not equal
-  EXPECT_EQ(7 * 6, 42);              // Check equality
+  EXPECT_STRNE("hello", "world");  // Strings are not equal
+  EXPECT_EQ(7 * 6, 42);               // Arithmetic equality
 }
 ```
 
-### Step 2: Define a `BUILD` File
+### b. Create a BUILD File
 
-Create a `BUILD` file in the same directory with the following content to declare your test target:
+In the same directory, create a file named `BUILD` with this content:
 
-```starlark
+```python
 cc_test(
     name = "hello_test",
     size = "small",
@@ -126,30 +86,29 @@ cc_test(
 )
 ```
 
-This tells Bazel to build a test binary named `hello_test` linking with GoogleTest libraries.
+This `cc_test` target defines a small test binary named `hello_test`, linking it against GoogleTest and GoogleTest's `main()` function.
 
 <Tip>
-If you are using a compiler other than GCC or Clang, adjust the C++ standard flag accordingly using `--cxxopt=/std:c++17` for MSVC.
+If you are using MSVC on Windows, ensure that Bazel compiler flags enable C++17 with `/std:c++17`. For GCC/Clang, use `--cxxopt=-std=c++17` when building.
 </Tip>
 
 ---
 
-## 5. Building and Running Your Test
+## 4. Building and Running Your Test
 
-### Step 1: Compile and Test Using Bazel
-
-Run Bazel with the following command in your workspace root:
+Run the following command in your workspace directory:
 
 ```bash
 bazel test --cxxopt=-std=c++17 --test_output=all //:hello_test
 ```
 
-### Expected Output Snippet:
+### Expected Output Summary:
+
+You should see output similar to this:
 
 ```
 Running main() from gmock_main.cc
 [==========] Running 1 test from 1 test suite.
-[----------] Global test environment set-up.
 [----------] 1 test from HelloTest
 [ RUN      ] HelloTest.BasicAssertions
 [       OK ] HelloTest.BasicAssertions (0 ms)
@@ -159,65 +118,63 @@ Running main() from gmock_main.cc
 [  PASSED  ] 1 test.
 ```
 
-This confirms that Bazel successfully compiled and executed your GoogleTest test case.
+The command confirms successful compilation and test execution.
+
+<Check>
+If your test fails to build or run:
+- Confirm Bazel is installed and at least version 7.0.
+- Verify your compiler supports C++17.
+- Make sure your files (`MODULE.bazel`, `BUILD`, and `hello_test.cc`) are correctly named and located.
+</Check>
 
 ---
 
-## 6. Best Practices & Tips
+## 5. Best Practices & Tips for Bazel with GoogleTest
 
-- **Use Bazel Modules (`MODULE.bazel`) When Possible:** This is the modern approach and simplifies dependency management.
-- **Stay Updated:** Regularly verify you use the latest GoogleTest version compatible with Bazel.
-- **Compiler Flags:** Always specify C++17 or higher using `--cxxopt` to avoid compatibility issues.
-- **Link `gtest_main` Unless Providing Your Main:** Depending on your setup, link with `@googletest//:gtest_main` to get the default main function for tests.
-
-<Tip>
-When cross-platform support is required, validate builds on all target environments you support to catch platform-specific quirks early.
-</Tip>
+- **Use Bazel Central Registry**: Managing dependencies via `MODULE.bazel` leverages Bazel's module system, ensuring consistent and repeatable builds.
+- **Set C++17 Explicitly**: Use `--cxxopt=-std=c++17` (or `/std:c++17` on MSVC) to guarantee correct standard version during build.
+- **Separate Tests from Main Code**: Organize test targets (`cc_test`) separately from your main application code for clarity.
+- **Use `gtest_main`**: Including `@googletest//:gtest_main` provides the GoogleTest main function, saving you from writing one.
 
 ---
 
-## 7. Troubleshooting
+## 6. Troubleshooting Common Issues
 
-<AccordionGroup title="Common Issues Setting Up GoogleTest with Bazel">
-<Accordion title="Bazel cannot find GoogleTest dependencies">
-Check that your `MODULE.bazel` or `WORKSPACE` file correctly includes GoogleTest and its dependencies. Run `bazel sync` to refresh external repos.
+<AccordionGroup title="Troubleshooting Bazel Setup and Build Issues">
+<Accordion title="GoogleTest Not Found or Dependency Errors">
+Make sure your `MODULE.bazel` file is correctly placed in the workspace root and specifies the correct googletest version. Run `bazel sync` to refresh dependencies.
 </Accordion>
-
-<Accordion title="Test build fails due to C++ standard errors">
-Confirm you pass the C++17 flag on build and test commands as `--cxxopt=-std=c++17` for Clang/GCC or equivalent for MSVC.
+<Accordion title="Build Fails Due to C++ Standard Errors">
+Ensure that your compiler options explicitly enable C++17 by adding `--cxxopt=-std=c++17` to `bazel test` or `bazel build` commands.
 </Accordion>
-
-<Accordion title="Linker errors about main function missing">
-Ensure your `BUILD` file links with `@googletest//:gtest_main` unless providing a custom `main()`.
+<Accordion title="Tests Not Running or Test Output Not Visible">
+Pass `--test_output=all` to your Bazel test command to see detailed test logs.
+Also, verify `cc_test` target names and dependencies are correctly set.
+</Accordion>
+<Accordion title="Linker Errors on Windows with MSVC">
+Ensure your Bazel command includes `/std:c++17` in `--cxxopt` and that your environment uses compatible runtime libraries.
+Consider running via the MSVC Developer Command Prompt.
 </Accordion>
 </AccordionGroup>
 
-<Tip>
-If problems persist, consult the [Common Issues and Fixes](https://example.com/getting-started/troubleshooting-support/common-issues-and-fixes) guide in this documentation.
-</Tip>
-
 ---
 
-## 8. Next Steps
+## 7. Where to Go Next
 
-- Explore writing your own tests using the [Primer guide](../first-test-and-validation/write-run-your-first-test).
-- Review example usage in the GoogleTest samples directory.
-- Learn more about advanced test features like mocks, assertions, and parameterized tests.
-- Check out [Integration & Build System Support](../../../overview/feature-overview-integration/integration-points) for deeper integration insights.
-- For alternate build systems, see the [Install with CMake](../installation-configuration/install-cmake) page.
+- Learn to write tests using [TEST and TEST_F macros](https://google.github.io/googletest/primer.html#writing-the-first-test).
+- Explore GoogleTest's rich [assertion APIs](https://google.github.io/googletest/primer.html#assertions).
+- Check out [Sample Code](samples.md) for more complete examples.
+- For other build systems, see the [Install with CMake](install-cmake.md) guide.
 
 ---
 
 ## References
 
-- [GoogleTest Repository on GitHub](https://github.com/google/googletest)
-- [Bazel Official Site](https://bazel.build)
-- [Bazel Central Registry - GoogleTest module](https://registry.bazel.build/modules/googletest)
-- [Bazel C++ Tutorial](https://docs.bazel.build/versions/main/tutorial/cpp.html)
-
+- Bazel Official Site: [https://bazel.build/](https://bazel.build/)
+- Bazel Central Registry for googletest: [https://registry.bazel.build/modules/googletest](https://registry.bazel.build/modules/googletest)
+- GoogleTest Primer: [https://google.github.io/googletest/primer.html](https://google.github.io/googletest/primer.html)
+- GoogleTest GitHub Repo: https://github.com/google/googletest
 
 ---
 
-This page is part of the Getting Started with GoogleTest documentation under Installation & Configuration.
-
-<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "WORKSPACE", "range": "1-65"},{"path": "MODULE.bazel", "range": "1-48"},{"path": "docs/quickstart-bazel.md", "range": "1-87"}]} />
+<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "docs/quickstart-bazel.md", "range": "1-102"}]} />
